# chat-bot

./: README.md  pyproject.toml
app/: main.py
documents/: document.txt
scripts/: load_model.py
templates/: index.html
